fix(style): fix in width and overflow-x

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -174,6 +174,8 @@ $novo-theme: mat.define-light-theme(
 html,
 body {
   height: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 body {
   margin: 0;
